@@ -1,3 +1,9 @@
+2006-01-18 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCast.c (backPatchLabels): fixed bug #1408066: made it
+	inifinitely recurseable, added static	
+	* support/regression/tests/bug-1408066.c: added
+
 2006-01-17 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCicode.h,
